MDEV-33031 Assertion failure upon reading from performance schema with binlog enabled

need to protect access to thread-local cache_mngr with LOCK_thd_data

technically only access from different threads has to be protected,
but this is the SHOW STATUS code path, so the difference is neglectable